--- a/index/templates/index/login_before_view.html
+++ b/index/templates/index/login_before_view.html
@@ -1,45 +1,75 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		{% load static %}
-		<meta charset="ISO-8859-1">
-		<title>Login</title>
-		<link rel="shortcut icon" type="image/png" href="{% static 'index/images/favicon.png' %}"/>
-		<link type="text/css" rel="stylesheet" href="{% static 'index/css/loginpage_style.css' %}">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-		<script type="text/javascript" src="{% static 'index/js/loginpage.js' %}"></script>
-	</head>
-	<body>
+<head>
+	{% load static %}
+	<meta charset="ISO-8859-1">
+	<title>Login/Sign Up</title>
+	<link rel="shortcut icon" type="image/png" href="{% static 'index/images/favicon.png' %}"/>
+	<link type="text/css" rel="stylesheet" href="{% static 'index/css/loginpage_style.css' %}">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+	<script type="text/javascript" src="{% static 'index/js/loginpage.js' %}"></script>
+</head>
+<body>
 	
-	  <div class="materialContainer">
-  		 <div class="box">
-	  		{% if user_created %}<div class="info_messaage">{{ user_created }}</div>{% endif %}
-      		<div class="title">LOGIN</div>
-				<form action="{% url 'index:redirect-after-login' %}" method="post">
-	  				{% csrf_token %}
-	  				{% if message %}<div class="error_messaage">{{ message }}</div>{% endif %}
-      				<div class="input">
-         				<label for="name">Username</label>
-         				<input type="text" name="username" id="name">
-         				<span class="spin"></span>
-     				</div>
-					<input type="hidden" name="next" value="{{ request.GET.next }}">
-      				<div class="input">
-         				<label for="pass">Password</label>
-         				<input type="password" name="pass" id="pass">
-         				<span class="spin"></span>
-      				</div>
+	<div class="materialContainer">
 
-      				<div class="button login">
-         				<button><span>GO</span> <i class="fa fa-check"></i></button>
-      				</div>
-    			</form>
-      		<a href="{% url 'index:forgot-password' %}" class="pass-forgot">Forgot your password?</a>
 
-   		</div>
+   <div class="box">
+	  {% if message %}<div class="info_messaage">{{ user_created }}</div>{% endif %}
+      <div class="title">LOGIN</div>
+	<form action="{% url 'index:login' %}" method="post">
+	  {% csrf_token %}
+	  {% if message %}<div class="error_messaage">{{ message }}</div>{% endif %}
+      <div class="input">
+         <label for="name">Username</label>
+         <input type="text" name="username" id="name">
+         <span class="spin"></span>
+      </div>
 
-	 </div>
+      <div class="input">
+         <label for="pass">Password</label>
+         <input type="password" name="pass" id="pass">
+         <span class="spin"></span>
+      </div>
+
+      <div class="button login">
+         <button><span>GO</span> <i class="fa fa-check"></i></button>
+      </div>
+    </form>
+      <a href="{% url 'index:forgot-password' %}" class="pass-forgot">Forgot your password?</a>
+
+   </div>
+
+   <div class="overbox">
+      <div class="material-button alt-2"><span class="shape"></span></div>
+
+      <div class="title">REGISTER</div>
+      <form action="{% url 'index:signup' %}" method="post" class="signup-form">
+   	    {% csrf_token %}
+        <div class="input">
+          <label for="email">Email</label>
+          <input type="text" name="email" id="email">
+          <span class="spin"></span>
+        </div>
+        <div class="input">
+          <label for="regname">Username</label>
+          <input type="text" name="regname" id="regname">
+          <span class="spin"></span>
+       </div>
+       <div class="input">
+          <label for="regpass">Password</label>
+          <input type="password" name="regpass" id="regpass">
+          <span class="spin"></span>
+       </div>
+	   <div class="button">
+          <button class="signup-btn"><span>Sign Up</span></button>
+       </div>
+     </form>
+
+   </div>
+
+</div>
 	
 	
-   </body>
+</body>
 </html>
