--- a/index/templates/index/FormView.html
+++ b/index/templates/index/FormView.html
@@ -22,7 +22,7 @@
     <script src="{% static 'index/js/form_view_js.js' %}" type="text/javascript" ></script>
     
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="{% static 'index/materialize.css' %}">
+    <link rel="stylesheet" href="{% static 'index/css/materialize.css' %}">
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
